--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -156,56 +156,11 @@
     height: calc(100% - 40px);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     overflow: auto;
     background-color: var(--secondary-color);
 }
-
-.info-panel>.information>table {
-    margin: 10px 10px 5px 10px;
-    background-color: var(--secondary-color);
-}
-
-.info-panel>.information>.solution {
-    padding: 10px;
-    margin: 5px 10px 10px 10px;
-    bottom: 0;
-    width: calc(100% - 40px);
-    height: 30%;
-    min-height: 30%;
-    border-radius: 5px;
-    resize: none;
-    overflow-x: none;
-    overflow-y: auto;
-    background-color: var(--secondary-light-color);
-}
-
-.info-panel>.information>table th {
-    text-align: center;
-    min-width: 100px;
-    max-width: 100px;
-    height: 30px;
-    overflow: hidden;
-    background-color: var(--secondary-dark-color);
-}
-
-.info-panel>.information>table td {
-    text-align: center;
-    min-width: 100px;
-    max-width: 100px;
-    height: 30px;
-    overflow: hidden;
-    background-color: var(--secondary-light-color);
-}
-
-.info-panel>.information>table select {
-    background-color: var(--secondary-light-color);
-    color: var(--on-secondary-color);
-    height: 100%;
-    width: 100%;
-}
-
 .info-panel>.information::-webkit-scrollbar {
     width: 10px;
     height: 10px;
@@ -272,32 +227,26 @@
     align-items: center;
 }
 
-.draw-panel>.tree {
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-}
-
-.draw-panel>.tree::-webkit-scrollbar {
+.draw-panel::-webkit-scrollbar {
     width: 10px;
     height: 10px;
 }
 
-.draw-panel>.tree::-webkit-scrollbar-track {
+.draw-panel::-webkit-scrollbar-track {
     background: var(--secondary-light-color);
     padding: 1px;
     border-radius: 5px;
 }
 
-.draw-panel>.tree::-webkit-scrollbar-thumb {
+.draw-panel::-webkit-scrollbar-thumb {
     background: var(--secondary-dark-color);
     border-radius: 5px;
 }
 
-.draw-panel>.tree::-webkit-scrollbar-thumb:hover {
+.draw-panel::-webkit-scrollbar-thumb:hover {
     background-image: linear-gradient(to right, var(--secondary-light-color), var(--secondary-dark-color));
 }
 
-.draw-panel>.tree::-webkit-scrollbar-corner {
+.draw-panel::-webkit-scrollbar-corner {
     background: var(--secondary-light-color);
 }
