--- a/docs/css/home.css
+++ b/docs/css/home.css
@@ -6,7 +6,7 @@
     --room2-color:orange;
     --bathroom2-color: purple;
     --sittingroom-color: gray;
-    --room3-color: black;
+    --room3-color: beige;
     --library-color: turquoise;
     --plants-color: green;
     --img-width: 560;
@@ -115,10 +115,10 @@
 .space#plants {
     position: absolute;
     top: calc(0px * var(--wrapper-height) / var(--img-height));
-    right: calc(150px * var(--wrapper-width) / var(--img-width));
+    right: calc(140px * var(--wrapper-width) / var(--img-width));
     bottom: calc(160px * var(--wrapper-height) / var(--img-height));
     left: calc(0px * var(--wrapper-width) / var(--img-width));
-    width: calc(10px * var(--wrapper-width) / var(--img-width));
+    width: calc(20px * var(--wrapper-width) / var(--img-width));
     height: calc(80px * var(--wrapper-height) / var(--img-height));
     background-color: var(--plants-color);
     z-index: 70;
@@ -138,12 +138,12 @@
 
 .space#room3 {
     position: absolute;
-    top: calc(200px * var(--wrapper-height) / var(--img-height));
+    top: calc(120px * var(--wrapper-height) / var(--img-height));
     right: calc(0px * var(--wrapper-width) / var(--img-width));
     bottom: calc(200px * var(--wrapper-height) / var(--img-height));
     left: calc(440px * var(--wrapper-width) / var(--img-width));
     width: calc(120px * var(--wrapper-width) / var(--img-width));
-    height: calc(160px * var(--wrapper-height) / var(--img-height));
+    height: calc(240px * var(--wrapper-height) / var(--img-height));
     background-color: var(--room3-color);
     z-index: 50;
 }
@@ -169,7 +169,56 @@
     background-color: red;
 }
 
-.info-panel > .information > img {
-    width: 100%;
-    height: 100%;
+.node:hover {
+    transform: scale(1.2);
+    background-color: aqua;
+}
+
+.node#sittingroom {
+    position: absolute;
+    bottom: calc(10px * var(--wrapper-height) / var(--img-height));
+    left: calc(10px * var(--wrapper-width) / var(--img-width));
+    z-index: 80;
+}
+
+.node#room3 {
+    position: absolute;
+    bottom: calc(10px * var(--wrapper-height) / var(--img-height));
+    left: calc(10px * var(--wrapper-width) / var(--img-width));
+    z-index: 80;
+}
+
+.node#room2 {
+    position: absolute;
+    bottom: calc(10px * var(--wrapper-height) / var(--img-height));
+    left: calc(10px * var(--wrapper-width) / var(--img-width));
+    z-index: 80;
+}
+
+.node#plants {
+    position: absolute;
+    bottom: calc(-20px * var(--wrapper-height) / var(--img-height));
+    right: calc(-50px * var(--wrapper-width) / var(--img-width));
+    z-index: 80;
+}
+
+.node#corridor {
+    position: absolute;
+    bottom: calc(15px * var(--wrapper-height) / var(--img-height));
+    left: calc(25px * var(--wrapper-width) / var(--img-width));
+    z-index: 80;
+}
+
+.node#entrance {
+    position: absolute;
+    top: calc(-40px * var(--wrapper-height) / var(--img-height));
+    left: calc(15px * var(--wrapper-width) / var(--img-width));
+    z-index: 80;
+}
+
+.node#kitchen {
+    position: absolute;
+    top: calc(45px * var(--wrapper-height) / var(--img-height));
+    right: calc(10px * var(--wrapper-width) / var(--img-width));
+    z-index: 80;
 }
